# strategic-mind-games

./: .gitignore  README.md  build.bat  build.sh  clean.bat  clean.sh  run.bat  run.sh  test-complete.sh
java-frontend/: pom.xml  verify-dependencies.sh  verify-native.sh
java-frontend/src/main/java/com/mindgames/: Main.java
java-frontend/src/main/java/com/mindgames/config/: Configuration.java
java-frontend/src/main/java/com/mindgames/core/: Claim.java  GameEngine.java  GameState.java  Move.java  Player.java  RoundResult.java
java-frontend/src/main/java/com/mindgames/integration/: AIBridge.java  AIBridgeTest.java  JNILoader.java  RustBridge.java  RustBridgeTest.java
java-frontend/src/main/java/com/mindgames/ui/: BoardPanel.java  ControlPanel.java  GameWindow.java  LogPanel.java  StatisticsPanel.java
java-frontend/src/main/resources/: config.properties  logback.xml
python-ai/: config.yaml  requirements.txt
python-ai/src/: ai_engine.py  api_server.py  bluff_detector.py  pattern_analyzer.py  strategy_model.py  training_pipeline.py
rust-optimizer/: Cargo.toml  build.rs  build_lib.sh
rust-optimizer/src/: alpha_beta.rs  evaluation.rs  ffi.rs  game_tree.rs  lib.rs  minimax.rs
